# supermarket-comparison

./: .dockerignore  .env.example  .gcloudignore  .gitignore  AGENTS.md  Dockerfile  README.md  models.py  package-lock.json  package.json  pyproject.toml
.github/scripts/: send-scrape-email.ps1
.github/workflows/: deploy-api.yml  scrape-prices.yml
app/: __init__.py  main.py  models.py
app/api/: main.py  models.py
app/db/: repository.py  seed_shipping.py
app/scrapers/: base.py  common.py  registry.py
app/scrapers/chains/: carrefour.py  hazi_hinam.py  rami_levi.py  shufersal.py  yohananof.py
extension/: background.js  carrefour-bridge.js  content.js  manifest.json  popup.html  popup.js  styles.css
scrapers/: base.py
scripts/: debug_common.py  debug_compare.py  force_full_rami_levi.py
supabase/migrations/: 20260530000100_initial_schema.sql  20260606192832_add_chain_compare_stores.sql  20260606193136_add_chain_compare_store_read_policy.sql  20260704120000_add_price_import_status.sql  20260711120000_update_carrefour_compare_store.sql
