[project]
name = "supermarket-comparison"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=26.1.0",
    "pydantic>=2.12.5",
    "ruff>=0.15.0",
]
[tool.ruff]
line-length = 88
select = ["E", "F", "W"]
ignore = ["E203"]
[tool.black]
line-length = 88
target-version = ['py38']
