[project]
name = "supermarket-comparison"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "black>=26.1.0",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "fastapi>=0.115.0",
    "lxml>=6.0.2",
    "psycopg>=3.3.3",
    "psycopg-binary>=3.3.3",
    "psycopg-pool>=3.2.0",
    "pydantic>=2.12.5",
    "req>=1.0.0",
    "requests>=2.32.5",
    "ruff>=0.15.0",
    "uvicorn>=0.34.0",
]
[tool.ruff]
line-length = 88
select = ["E", "F", "W"]
ignore = ["E203"]
[tool.black]
line-length = 88
target-version = ['py38']
